--- a/Angular8/src/app/app.component.html
+++ b/Angular8/src/app/app.component.html
@@ -4,3 +4,5 @@
 <mat-icon>face</mat-icon>
 <app-string-interpolation></app-string-interpolation>
 <app-property-binding></app-property-binding>
+<app-event-binding></app-event-binding>
+<app-two-way-data-binding></app-two-way-data-binding>
