--- a/Angular8/src/app/app.component.html
+++ b/Angular8/src/app/app.component.html
@@ -6,3 +6,4 @@
 <app-property-binding></app-property-binding>
 <app-event-binding></app-event-binding>
 <app-two-way-data-binding></app-two-way-data-binding>
+<app-ng-style></app-ng-style>
