Encerramento Seção 4 - Diretivas

--- a/Angular8/src/app/app.component.html
+++ b/Angular8/src/app/app.component.html
@@ -7,3 +7,10 @@
 <app-event-binding></app-event-binding>
 <app-two-way-data-binding></app-two-way-data-binding>
 <app-ng-style></app-ng-style>
+<app-ng-class></app-ng-class>
+<app-ng-if></app-ng-if>
+<app-ng-for></app-ng-for>
+<app-ng-switch></app-ng-switch>
+<app-ng-template></app-ng-template>
+<app-ng-container></app-ng-container>
+<app-ng-content></app-ng-content>
