--- a/Angular8/src/app/secao3/components/ng-class/ng-class.component.html
+++ b/Angular8/src/app/secao3/components/ng-class/ng-class.component.html
@@ -1,1 +1,18 @@
-<p>ng-class works!</p>
+<mat-card>
+  <mat-card-title>Select</mat-card-title>
+  <mat-card-content>
+    <h3>Please, select one class:</h3>
+    <mat-form-field>
+      <mat-select placeholder="Choose the class:" [(ngModel)]="myClass" name="myClass">
+        <mat-option value="myClass1">Class 1</mat-option>
+        <mat-option value="myClass2">Class 2</mat-option>
+        <mat-option value="myClass3">Class 3</mat-option>
+        <mat-option value="myClass4">Class 4</mat-option>
+      </mat-select>
+    </mat-form-field>
+  </mat-card-content>
+  <mat-card-footer>
+    <p>Result</p>
+    <p [ngClass]="myClass">Test</p>
+  </mat-card-footer>
+</mat-card>
