Seção 8 - RXJS Início

--- a/Angular8/src/app/app.component.html
+++ b/Angular8/src/app/app.component.html
@@ -14,3 +14,4 @@
 <app-ng-template></app-ng-template>
 <app-ng-container></app-ng-container>
 <app-ng-content></app-ng-content>
+<app-rxjs-basic></app-rxjs-basic>
