Seção 8 - Hot Observables Intro e Rxjs básico

--- a/Angular8/src/app/app.component.html
+++ b/Angular8/src/app/app.component.html
@@ -14,4 +14,6 @@
 <app-ng-template></app-ng-template>
 <app-ng-container></app-ng-container>
 <app-ng-content></app-ng-content>
-<app-rxjs-basic></app-rxjs-basic>
+<!-- <app-rxjs-basic></app-rxjs-basic>
+<app-rxjs-cold-observables></app-rxjs-cold-observables> -->
+<app-rxjs-hot-observables-intro></app-rxjs-hot-observables-intro>
