Seção 8 - Rxjs Encerramento

--- a/Angular8/src/app/app.component.html
+++ b/Angular8/src/app/app.component.html
@@ -16,4 +16,6 @@
 <app-ng-content></app-ng-content>
 <!-- <app-rxjs-basic></app-rxjs-basic>
 <app-rxjs-cold-observables></app-rxjs-cold-observables> -->
-<app-rxjs-hot-observables-intro></app-rxjs-hot-observables-intro>
+<!-- <app-rxjs-hot-observables-intro></app-rxjs-hot-observables-intro> -->
+<!-- <app-rxjs-hot-observables></app-rxjs-hot-observables> -->
+<app-rxjs-subjects></app-rxjs-subjects>
