--- a/routes/src/app/app.component.html
+++ b/routes/src/app/app.component.html
@@ -2,8 +2,9 @@
   <span>My Store</span>
   <span></span>
   <div fxLayoutGap="20px">
-    <a mat-raised-button routerLink="/dvds" routerLinkActive="mat-accent">DVDs</a>
-    <a mat-raised-button routerLink="/books" routerLinkActive="mat-accent">Books</a>
+    <a mat-raised-button routerLink="dvds" routerLinkActive="mat-accent">DVDs</a>
+    <a mat-raised-button routerLink="books" routerLinkActive="mat-accent">Books</a>
+    <a mat-raised-button routerLink="electronics" routerLinkActive="mat-accent">Electronics</a>
   </div>
 </mat-toolbar>
 <router-outlet></router-outlet>
