--- a/ngrx-basic/src/app/app.component.html
+++ b/ngrx-basic/src/app/app.component.html
@@ -1,8 +1,10 @@
 <div fxLayout="column" fxLayoutAlign="start center">
   <div fxLayout="column" fxLayoutAlign="start stretch" fxFlex="70">
-    <app-person *ngFor="let p of people$ | async" [personObject]="p" (delete)="delete($event)"
+    <!-- <app-person *ngFor="let p of people$ | async" [personObject]="p" (delete)="delete($event)"
       (update)="update($event)">
 
+    </app-person> -->
+    <app-person *ngFor="let p of people$ | async" [person]="p" (delete)="delete($event)" (update)="update($event)">
     </app-person>
   </div>
   <button mat-fab color="primary" (click)="addNew()" class="button-add">New</button>
