Finalização do projeto

--- a/product-app/src/app/components/departments/department-form/department-form.component.html
+++ b/product-app/src/app/components/departments/department-form/department-form.component.html
@@ -6,7 +6,7 @@
   
       <div fxLayout="row" fxLayoutAlign="space-between stretch">
         <mat-form-field fxFlex="100">
-          <input matInput placeholder="Department name" ><!-- [(ngModel)]="depName" -->
+          <input matInput placeholder="Department name"  [(ngModel)]="depName">
         </mat-form-field>
         
       </div>
