--- a/product-app/src/app/components/products/product-form/product-form.component.html
+++ b/product-app/src/app/components/products/product-form/product-form.component.html
@@ -1,4 +1,4 @@
-<!-- <mat-card fxFlex>
+<mat-card fxFlex>
     <mat-card-title>
       <h4>New Product</h4>
     </mat-card-title>
@@ -40,4 +40,4 @@
       <button mat-button color="accent" (click)="clear()">Clear</button>
     </mat-card-actions>
   </mat-card>
-   -->
+  
