--- a/product-app/src/app/components/products/products-table/products-table.component.html
+++ b/product-app/src/app/components/products/products-table/products-table.component.html
@@ -1,1 +1,26 @@
-<p>products-table works!</p>
+<div fxLayout="row" fxLayoutAlign="space-around stretch">
+    <table fxFlex mat-table [dataSource]="products">
+        <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef> ID </th>
+            <td mat-cell *matCellDef="let p">{{p.id}}</td>
+        </ng-container>
+        <ng-container matColumnDef="{{prodColumns[1]}}">
+            <th mat-header-cell *matHeaderCellDef> Product Name </th>
+            <td mat-cell *matCellDef="let p">{{p.name}}</td>
+        </ng-container>
+        <ng-container matColumnDef="{{prodColumns[2]}}">
+            <th mat-header-cell *matHeaderCellDef> Price </th>
+            <td mat-cell *matCellDef="let p">{{p.price}}</td>
+        </ng-container>
+        <ng-container matColumnDef="{{prodColumns[3]}}">
+            <th mat-header-cell *matHeaderCellDef> Description </th>
+            <td mat-cell *matCellDef="let p">{{p.description}}</td>
+        </ng-container>
+        <ng-container matColumnDef="{{prodColumns[4]}}">
+            <th mat-header-cell *matHeaderCellDef> Department </th>
+            <td mat-cell *matCellDef="let p">{{p.department.name}}</td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="prodColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: prodColumns"></tr>
+    </table>
+</div>
