--- a/financys/src/app/pages/categories/category-list/category-list.component.html
+++ b/financys/src/app/pages/categories/category-list/category-list.component.html
@@ -1,1 +1,84 @@
-<p>category-list works!</p>
+<nav>
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item">
+      <a routerLink="/">Home</a>
+    </li>
+    <li class="breadcrumb-item active">Categorias</li>
+  </ol>
+</nav>
+
+<div class="row mb-4">
+  <div class="col-md">
+    <h1 class="h2 border-left pl-2">
+      Categorias
+    </h1>
+  </div>
+  <div class="col-md-3 text-right">
+    <a routerLink="new" class="btn btn-success float-right">
+      + Nova Categoria
+    </a>
+  </div>
+</div>
+
+<table class="table table-hover">
+  <thead>
+    <tr class="bg-primary text-light">
+      <th>Categorias</th>
+      <th>Ações</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>
+        <strong>Lazer</strong><br>
+        <small>Cinema, parque, praia, etc.</small>
+      </td>
+      <td>
+        <a [routerLink]="[12,'edit']" class="btn btn-outline-info btn-sm me-2">Editar</a>
+        <a (click)="alert()" class="btn btn-outline-danger btn-sm">Excluir</a>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <strong>Lazer</strong><br>
+        <small>Cinema, parque, praia, etc.</small>
+      </td>
+      <td>
+        <a [routerLink]="[12,'edit']" class="btn btn-outline-info btn-sm me-2">Editar</a>
+        <a (click)="alert()" class="btn btn-outline-danger btn-sm">Excluir</a>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <strong>Lazer</strong><br>
+        <small>Cinema, parque, praia, etc.</small>
+      </td>
+      <td>
+        <a [routerLink]="[12,'edit']" class="btn btn-outline-info btn-sm me-2">Editar</a>
+        <a (click)="alert()" class="btn btn-outline-danger btn-sm">Excluir</a>
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+ <!-- <nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item active" aria-current="page">Home</li>
+  </ol>
+</nav>
+
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="#">Home</a></li>
+    <li class="breadcrumb-item active" aria-current="page">Library</li>
+  </ol>
+</nav>
+
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="#">Home</a></li>
+    <li class="breadcrumb-item"><a href="#">Library</a></li>
+    <li class="breadcrumb-item active" aria-current="page">Data</li>
+  </ol>
+</nav>
+ -->
