--- a/financys/src/app/pages/categories/category-form/category-form.component.html
+++ b/financys/src/app/pages/categories/category-form/category-form.component.html
@@ -3,15 +3,16 @@
       <li class="breadcrumb-item">
         <a routerLink="/">Home</a>
       </li>
-      <li class="breadcrumb-item">Categorias</li>
-      <li class="breadcrumb-item active">Formulário de Categoria {{currentAction}}</li>
+      <li class="breadcrumb-item">
+        <a routerLink="/categories">Categorias</a></li>
+      <li class="breadcrumb-item active">{{pageTitle}}</li>
     </ol>
   </nav>
-  
+
   <div class="row mb-4">
     <div class="col-md">
       <h1 class="h2 border-left pl-2">
-        Formulário de categoria
+        {{pageTitle}}
       </h1>
     </div>
     <div class="col-md-3 text-right">
@@ -21,7 +22,7 @@
     </div>
   </div>
 
-  <form [formGroup]="categoryForm">
+  <form [formGroup]="categoryForm" (submit)="submitForm()">
       <div class="card">
           <div class="card-header">
               Informações sobre a categoria
@@ -30,16 +31,25 @@
               <div class="row">
                 <div class="form-group col-md-4">
                     <label for="name">Nome</label>
-                    <input type="text" class="form-control" id="name">
+                    <input type="text" class="form-control" id="name" formControlName="name">
+                    <div class="text-danger" *ngIf="categoryForm.get('name')?.invalid && categoryForm.get('name')?.touched">
+                      <div *ngIf="categoryForm.get('name')?.errors?.['required']">Dado obrigatório</div>
+                      <div *ngIf="categoryForm.get('name')?.errors?.['minLength']">Nome deve ter mais de 2 caracteres</div>
+                    </div>
                 </div>
                 <div class="form-group col-md-8">
                   <label for="description">Descrição</label>
-                  <input type="text" class="form-control" id="description">
+                  <input type="text" class="form-control" id="description" formControlName="description">
                 </div>
               </div>
-              
+
           </div>
       </div>
-      <button type="submit" class="btn btn-primary btn-lg float-end mt-3">Salvar</button>
+      <div class="alert alert-danger mt-4" *ngIf="serverErrorMessages">
+        <strong>Erro no servidor:</strong>
+        <ul>
+          <li *ngFor="let error of serverErrorMessages">{{error}}</li>
+        </ul>
+      </div>
+      <button [disabled]="submittingForm || categoryForm.invalid" type="submit" class="btn btn-primary btn-lg float-end mt-3">Salvar</button>
   </form>
-  
