--- a/financys/src/app/pages/entries/entry-form/entry-form.component.html
+++ b/financys/src/app/pages/entries/entry-form/entry-form.component.html
@@ -29,14 +29,57 @@
         </div>
         <div class="card-body">
             <div class="row">
-              <div class="form-group col-md-4">
-                  <label for="name">Nome</label>
+              <!-- type -->
+              <div class="form-group col-md-2">
+                <label for="type">Tipo</label>
+                <select class="form-control" id="type" formControlName="type" name="type">
+                  <option value="expense">Despesa</option>
+                  <option value="revenue">Receita</option>
+                </select>
+                <div class="text-danger" *ngIf="entryForm.get('type')?.invalid && entryForm.get('type')?.touched">
+                  <div *ngIf="entryForm.get('type')?.errors?.['required']">Dado obrigatório</div>
+                </div>
+              </div>
+              <!-- name -->
+              <div class="form-group col-md-5">
+                  <label for="name">Lançamento</label>
                   <input type="text" class="form-control" id="name" formControlName="name">
                   <div class="text-danger" *ngIf="entryForm.get('name')?.invalid && entryForm.get('name')?.touched">
                     <div *ngIf="entryForm.get('name')?.errors?.['required']">Dado obrigatório</div>
                     <div *ngIf="entryForm.get('name')?.errors?.['minLength']">Nome deve ter mais de 3 caracteres</div>
                   </div>
               </div>
+              <!-- amount -->
+              <div class="form-group col-md-3">
+                <label for="name">Valor</label>
+                <div class="input-group">
+                  <div class="input-group-prepend">
+                    <div class="input-group-text">R$</div>
+                  </div>
+                  <input [imask]="imaskConfig" type="text" class="form-control text-end" id="amount" formControlName="amount">
+                </div>
+
+                <div class="text-danger" *ngIf="entryForm.get('amount')?.invalid && entryForm.get('amount')?.touched">
+                  <div *ngIf="entryForm.get('amount')?.errors?.['required']">Dado obrigatório</div>
+                </div>
+              </div>
+              <!-- date -->
+              <div class="form-group col-md-2">
+                <label for="name">Data</label>
+                <p-calendar
+                  id="date"
+                  formControlName="date"
+                  inputStyleClass="form-control"
+                  dataType="string"
+                  dateFormat="dd/mm/yy"
+                  [showButtonBar]="true"
+                >
+                </p-calendar>
+                <div class="text-danger" *ngIf="entryForm.get('amount')?.invalid && entryForm.get('amount')?.touched">
+                  <div *ngIf="entryForm.get('amount')?.errors?.['required']">Dado obrigatório</div>
+                </div>
+              </div>
+              <!-- description -->
               <div class="form-group col-md-8">
                 <label for="description">Descrição</label>
                 <input type="text" class="form-control" id="description" formControlName="description">
