--- a/financys/src/app/pages/entries/entry-list/entry-list.component.html
+++ b/financys/src/app/pages/entries/entry-list/entry-list.component.html
@@ -14,7 +14,7 @@
     </h1>
   </div>
   <div class="col-md-3 text-right">
-    <a routerLink="new" class="btn btn-success float-right">
+    <a routerLink="new" class="btn btn-success float-end">
       + Novo Lançamento
     </a>
   </div>
