--- a/financys/src/app/pages/categories/category-form/category-form.component.html
+++ b/financys/src/app/pages/categories/category-form/category-form.component.html
@@ -22,7 +22,7 @@
     </div>
   </div>
 
-  <form [formGroup]="categoryForm" (submit)="submitForm()">
+  <form [formGroup]="resourceForm" (submit)="submitForm()">
       <div class="card">
           <div class="card-header">
               Informações sobre a categoria
@@ -32,9 +32,9 @@
                 <div class="form-group col-md-4">
                     <label for="name">Nome</label>
                     <input type="text" class="form-control" id="name" formControlName="name">
-                    <div class="text-danger" *ngIf="categoryForm.get('name')?.invalid && categoryForm.get('name')?.touched">
-                      <div *ngIf="categoryForm.get('name')?.errors?.['required']">Dado obrigatório</div>
-                      <div *ngIf="categoryForm.get('name')?.errors?.['minLength']">Nome deve ter mais de 2 caracteres</div>
+                    <div class="text-danger" *ngIf="resourceForm.get('name')?.invalid && resourceForm.get('name')?.touched">
+                      <div *ngIf="resourceForm.get('name')?.errors?.['required']">Dado obrigatório</div>
+                      <div *ngIf="resourceForm.get('name')?.errors?.['minLength']">Nome deve ter mais de 2 caracteres</div>
                     </div>
                 </div>
                 <div class="form-group col-md-8">
@@ -51,5 +51,5 @@
           <li *ngFor="let error of serverErrorMessages">{{error}}</li>
         </ul>
       </div>
-      <button [disabled]="submittingForm || categoryForm.invalid" type="submit" class="btn btn-primary btn-lg float-end mt-3">Salvar</button>
+      <button [disabled]="submittingForm || resourceForm.invalid" type="submit" class="btn btn-primary btn-lg float-end mt-3">Salvar</button>
   </form>
