--- a/financys/src/app/pages/categories/category-form/category-form.component.html
+++ b/financys/src/app/pages/categories/category-form/category-form.component.html
@@ -1,55 +1,44 @@
-<nav>
-    <ol class="breadcrumb">
-      <li class="breadcrumb-item">
-        <a routerLink="/">Home</a>
-      </li>
-      <li class="breadcrumb-item">
-        <a routerLink="/categories">Categorias</a></li>
-      <li class="breadcrumb-item active">{{pageTitle}}</li>
-    </ol>
-  </nav>
+<app-bread-crumb [items]="[resourceBreadCrumb,{text: pageTitle}]"></app-bread-crumb>
 
-  <div class="row mb-4">
-    <div class="col-md">
-      <h1 class="h2 border-left pl-2">
-        {{pageTitle}}
-      </h1>
-    </div>
-    <div class="col-md-3 text-right">
-      <a routerLink="/categories" class="btn btn-light float-right">
-        << Voltar
-      </a>
-    </div>
+<div class="row mb-4">
+  <div class="col-md">
+    <h1 class="h2 border-left pl-2">
+      {{pageTitle}}
+    </h1>
   </div>
-
-  <form [formGroup]="resourceForm" (submit)="submitForm()">
-      <div class="card">
-          <div class="card-header">
-              Informações sobre a categoria
-          </div>
-          <div class="card-body">
-              <div class="row">
-                <div class="form-group col-md-4">
-                    <label for="name">Nome</label>
-                    <input type="text" class="form-control" id="name" formControlName="name">
-                    <div class="text-danger" *ngIf="resourceForm.get('name')?.invalid && resourceForm.get('name')?.touched">
-                      <div *ngIf="resourceForm.get('name')?.errors?.['required']">Dado obrigatório</div>
-                      <div *ngIf="resourceForm.get('name')?.errors?.['minLength']">Nome deve ter mais de 2 caracteres</div>
-                    </div>
-                </div>
-                <div class="form-group col-md-8">
-                  <label for="description">Descrição</label>
-                  <input type="text" class="form-control" id="description" formControlName="description">
-                </div>
+  <div class="col-md-3 text-right">
+    <a routerLink="/categories" class="btn btn-light float-right">
+      << Voltar
+    </a>
+  </div>
+</div>
+<form [formGroup]="resourceForm" (submit)="submitForm()">
+    <div class="card">
+        <div class="card-header">
+            Informações sobre a categoria
+        </div>
+        <div class="card-body">
+            <div class="row">
+              <div class="form-group col-md-4">
+                  <label for="name">Nome</label>
+                  <input type="text" class="form-control" id="name" formControlName="name">
+                  <div class="text-danger" *ngIf="resourceForm.get('name')?.invalid && resourceForm.get('name')?.touched">
+                    <div *ngIf="resourceForm.get('name')?.errors?.['required']">Dado obrigatório</div>
+                    <div *ngIf="resourceForm.get('name')?.errors?.['minLength']">Nome deve ter mais de 2 caracteres</div>
+                  </div>
               </div>
-
-          </div>
-      </div>
-      <div class="alert alert-danger mt-4" *ngIf="serverErrorMessages">
-        <strong>Erro no servidor:</strong>
-        <ul>
-          <li *ngFor="let error of serverErrorMessages">{{error}}</li>
-        </ul>
-      </div>
-      <button [disabled]="submittingForm || resourceForm.invalid" type="submit" class="btn btn-primary btn-lg float-end mt-3">Salvar</button>
-  </form>
+              <div class="form-group col-md-8">
+                <label for="description">Descrição</label>
+                <input type="text" class="form-control" id="description" formControlName="description">
+              </div>
+            </div>
+        </div>
+    </div>
+    <div class="alert alert-danger mt-4" *ngIf="serverErrorMessages">
+      <strong>Erro no servidor:</strong>
+      <ul>
+        <li *ngFor="let error of serverErrorMessages">{{error}}</li>
+      </ul>
+    </div>
+    <button [disabled]="submittingForm || resourceForm.invalid" type="submit" class="btn btn-primary btn-lg float-end mt-3">Salvar</button>
+</form>
