--- a/financys/src/app/pages/entries/entry-form/entry-form.component.html
+++ b/financys/src/app/pages/entries/entry-form/entry-form.component.html
@@ -1,13 +1,4 @@
-<nav>
-  <ol class="breadcrumb">
-    <li class="breadcrumb-item">
-      <a routerLink="/">Home</a>
-    </li>
-    <li class="breadcrumb-item">
-      <a routerLink="/entries">Lançamentos</a></li>
-    <li class="breadcrumb-item active">{{pageTitle}}</li>
-  </ol>
-</nav>
+<app-bread-crumb [items]="[resourceBreadCrumb,{text: pageTitle}]"></app-bread-crumb>
 
 <div class="row mb-4">
   <div class="col-md-9">
