--- a/financys/src/app/pages/entries/entry-list/entry-list.component.html
+++ b/financys/src/app/pages/entries/entry-list/entry-list.component.html
@@ -1,11 +1,4 @@
-<nav>
-  <ol class="breadcrumb">
-    <li class="breadcrumb-item">
-      <a routerLink="/">Home</a>
-    </li>
-    <li class="breadcrumb-item active">Lançamentos</li>
-  </ol>
-</nav>
+<app-bread-crumb [items]="[resourceBreadCrumb]"></app-bread-crumb>
 
 <div class="row mb-4">
   <div class="col-md">
