Adição de PageHeader nas páginas

--- a/financys/src/app/pages/categories/category-list/category-list.component.html
+++ b/financys/src/app/pages/categories/category-list/category-list.component.html
@@ -1,17 +1,12 @@
 <app-bread-crumb [items]="[resourceBreadCrumb]"></app-bread-crumb>
 
-<div class="row mb-4">
-  <div class="col-md">
-    <h1 class="h2 border-left pl-2">
-      Categorias
-    </h1>
-  </div>
-  <div class="col-md-3 text-right">
-    <a routerLink="new" class="btn btn-success float-right">
-      + Nova Categoria
-    </a>
-  </div>
-</div>
+<app-page-header
+  [page-title]="resourceBreadCrumb.text"
+  [button-text]="actionButtonConfig.text"
+  [button-link]="actionButtonConfig.link"
+  [button-class]="actionButtonConfig.class"
+>
+</app-page-header>
 
 <table class="table table-hover">
   <thead>
