--- a/financys/src/app/pages/entries/entry-form/entry-form.component.html
+++ b/financys/src/app/pages/entries/entry-form/entry-form.component.html
@@ -1,17 +1,12 @@
 <app-bread-crumb [items]="[resourceBreadCrumb,{text: pageTitle}]"></app-bread-crumb>
 
-<div class="row mb-4">
-  <div class="col-md-9">
-    <h1 class="h2 border-left pl-2">
-      {{pageTitle}}
-    </h1>
-  </div>
-  <div class="col-md-3 text-right">
-    <a routerLink="/entries" class="btn btn-light float-right">
-      << Voltar
-    </a>
-  </div>
-</div>
+<app-page-header
+  [page-title]="resourceBreadCrumb.text"
+  [button-text]="actionButtonConfig.text"
+  [button-link]="actionButtonConfig.link"
+  [button-class]="actionButtonConfig.class"
+>
+</app-page-header>
 
 <form [formGroup]="resourceForm" (submit)="submitForm()">
     <div class="card">
