--- a/financys/src/app/pages/categories/category-form/category-form.component.html
+++ b/financys/src/app/pages/categories/category-form/category-form.component.html
@@ -17,10 +17,8 @@
               <div class="form-group col-md-4">
                   <label for="name">Nome</label>
                   <input type="text" class="form-control" id="name" formControlName="name">
-                  <div class="text-danger" *ngIf="resourceForm.get('name')?.invalid && resourceForm.get('name')?.touched">
-                    <div *ngIf="resourceForm.get('name')?.errors?.['required']">Dado obrigatório</div>
-                    <div *ngIf="resourceForm.get('name')?.errors?.['minLength']">Nome deve ter mais de 2 caracteres</div>
-                  </div>
+
+                  <app-form-field-error [form-control]="resourceForm.controls['name']"></app-form-field-error>
               </div>
               <div class="form-group col-md-8">
                 <label for="description">Descrição</label>
