--- a/financys/src/app/pages/entries/entry-form/entry-form.component.html
+++ b/financys/src/app/pages/entries/entry-form/entry-form.component.html
@@ -21,18 +21,20 @@
                 <select class="form-control" id="type" formControlName="type" name="type">
                   <option *ngFor="let option of typeOptions" [value]="option.value">{{option.text}}</option>
                 </select>
-                <div class="text-danger" *ngIf="resourceForm.get('type')?.invalid && resourceForm.get('type')?.touched">
+                <app-form-field-error [form-control]="resourceForm.controls['type']"></app-form-field-error>
+                <!-- <div class="text-danger" *ngIf="resourceForm.get('type')?.invalid && resourceForm.get('type')?.touched">
                   <div *ngIf="resourceForm.get('type')?.errors?.['required']">Dado obrigatório</div>
-                </div>
+                </div> -->
               </div>
               <!-- name -->
               <div class="form-group col-md-5">
                   <label for="name">Lançamento</label>
                   <input type="text" class="form-control" id="name" formControlName="name">
-                  <div class="text-danger" *ngIf="resourceForm.get('name')?.invalid && resourceForm.get('name')?.touched">
+                  <app-form-field-error [form-control]="resourceForm.controls['name']"></app-form-field-error>
+                  <!-- <div class="text-danger" *ngIf="resourceForm.get('name')?.invalid && resourceForm.get('name')?.touched">
                     <div *ngIf="resourceForm.get('name')?.errors?.['required']">Dado obrigatório</div>
                     <div *ngIf="resourceForm.get('name')?.errors?.['minLength']">Nome deve ter mais de 3 caracteres</div>
-                  </div>
+                  </div> -->
               </div>
               <!-- amount -->
               <div class="form-group col-md-3">
@@ -44,9 +46,11 @@
                   <input [imask]="imaskConfig" type="text" class="form-control text-end" id="amount" formControlName="amount">
                 </div>
 
-                <div class="text-danger" *ngIf="resourceForm.get('amount')?.invalid && resourceForm.get('amount')?.touched">
+                <app-form-field-error [form-control]="resourceForm.controls['amount']"></app-form-field-error>
+
+               <!--  <div class="text-danger" *ngIf="resourceForm.get('amount')?.invalid && resourceForm.get('amount')?.touched">
                   <div *ngIf="resourceForm.get('amount')?.errors?.['required']">Dado obrigatório</div>
-                </div>
+                </div> -->
               </div>
               <!-- date -->
               <div class="form-group col-md-2">
@@ -60,9 +64,10 @@
                   [showButtonBar]="true"
                 >
                 </p-calendar>
-                <div class="text-danger" *ngIf="resourceForm.get('date')?.invalid && resourceForm.get('date')?.touched">
+                <app-form-field-error [form-control]="resourceForm.controls['date']"></app-form-field-error>
+                <!-- <div class="text-danger" *ngIf="resourceForm.get('date')?.invalid && resourceForm.get('date')?.touched">
                   <div *ngIf="resourceForm.get('date')?.errors?.['required']">Dado obrigatório</div>
-                </div>
+                </div> -->
               </div>
               <!-- paid -->
               <div class="row">
@@ -76,9 +81,10 @@
                       Pendente
                     </label>
                   </div>
-                  <div class="text-danger" *ngIf="resourceForm.get('paid')?.invalid && resourceForm.get('paid')?.touched">
+                  <app-form-field-error [form-control]="resourceForm.controls['paid']"></app-form-field-error>
+                  <!-- <div class="text-danger" *ngIf="resourceForm.get('paid')?.invalid && resourceForm.get('paid')?.touched">
                     <div *ngIf="resourceForm.get('paid')?.errors?.['required']">Dado obrigatório</div>
-                  </div>
+                  </div> -->
                 </div>
                 <!-- categoryId -->
                 <div class="form-group col-md-3">
@@ -86,9 +92,11 @@
                   <select class="form-control" id="categoryId" formControlName="categoryId" name="categoryId">
                     <option *ngFor="let c of categories" [value]="c.id">{{c.name}}</option>
                   </select>
-                  <div class="text-danger" *ngIf="resourceForm.get('categoryId')?.invalid && resourceForm.get('categoryId')?.touched">
+
+                  <app-form-field-error [form-control]="resourceForm.controls['categoryId']"></app-form-field-error>
+                  <!-- <div class="text-danger" *ngIf="resourceForm.get('categoryId')?.invalid && resourceForm.get('categoryId')?.touched">
                     <div *ngIf="resourceForm.get('categoryId')?.errors?.['required']">Dado obrigatório</div>
-                  </div>
+                  </div> -->
                 </div>
                 <!-- description -->
                 <div class="form-group col-md-7">
