Melhorias em PageHeaderComponent

--- a/financys/src/app/pages/reports/reports/reports.component.html
+++ b/financys/src/app/pages/reports/reports/reports.component.html
@@ -2,6 +2,7 @@
 </app-bread-crumb>
 <app-page-header
     page-title="Relatório de Receitas e Despesas"
+    [show-button]="false"
 >
 </app-page-header>
 
@@ -53,7 +54,7 @@
             </div>
 
             <div class="row row-cols-1 row-cols-md-4 justify-content-md-center mt-5 mb-5">
-                <div class="card text-center text-white bg-success me-2 mb-2">
+                <div class="card text-center text-white bg-success me-2">
                     <div class="card-header">
                         TOTAL DE RECEITAS
                     </div>
@@ -63,7 +64,7 @@
                         </h3>
                     </div>
                 </div>
-                <div class="card text-center text-white bg-danger me-2 mb-2">
+                <div class="card text-center text-white bg-danger me-2">
                     <div class="card-header">
                         TOTAL DE DESPESAS
                     </div>
