--- a/rxjs/src/app/app.component.html
+++ b/rxjs/src/app/app.component.html
@@ -5,8 +5,8 @@
       <mat-radio-button value="operators">Operators</mat-radio-button>
       <mat-radio-button value="async">Templates / Async</mat-radio-button>
       <mat-radio-button value="error-handling">Error Handling</mat-radio-button>
-      <!-- <mat-radio-button value="dragandrop">Drag and Drop</mat-radio-button>
-      <mat-radio-button value="unsubscribe">Unsubscribe</mat-radio-button>
+      <mat-radio-button value="dragandrop">Drag and Drop</mat-radio-button>
+      <!-- <mat-radio-button value="unsubscribe">Unsubscribe</mat-radio-button>
       <mat-radio-button value="switch-merge">Switch / Merge</mat-radio-button>
      --></mat-radio-group>
   </div>
@@ -15,9 +15,9 @@
       <app-basic-creation *ngSwitchCase="'basic-creation'" fxFill></app-basic-creation>
       <app-operators *ngSwitchCase="'operators'" fxFill></app-operators>
       <app-async *ngSwitchCase="'async'" fxFill></app-async>
-      <!-- <app-error-handling *ngSwitchCase="'error-handling'" fxFill></app-error-handling>
+      <app-error-handling *ngSwitchCase="'error-handling'" fxFill></app-error-handling>
       <app-drag-and-drop *ngSwitchCase="'dragandrop'" fxFill></app-drag-and-drop>
-      <app-unsubscribe *ngSwitchCase="'unsubscribe'" fxFill></app-unsubscribe>
+      <!-- <app-unsubscribe *ngSwitchCase="'unsubscribe'" fxFill></app-unsubscribe>
       <app-switch-merge *ngSwitchCase="'switch-merge'" fxFill></app-switch-merge>
      --></ng-container>
 
