--- a/rxjs/src/app/app.component.html
+++ b/rxjs/src/app/app.component.html
@@ -6,8 +6,8 @@
       <mat-radio-button value="async">Templates / Async</mat-radio-button>
       <mat-radio-button value="error-handling">Error Handling</mat-radio-button>
       <mat-radio-button value="dragandrop">Drag and Drop</mat-radio-button>
-      <!-- <mat-radio-button value="unsubscribe">Unsubscribe</mat-radio-button>
-      <mat-radio-button value="switch-merge">Switch / Merge</mat-radio-button>
+      <mat-radio-button value="unsubscribe">Unsubscribe</mat-radio-button>
+      <!-- <mat-radio-button value="switch-merge">Switch / Merge</mat-radio-button>
      --></mat-radio-group>
   </div>
   <div fxFlex="70" fxLayout="column" fxLayoutAlign="start start" fxFill>
@@ -17,8 +17,8 @@
       <app-async *ngSwitchCase="'async'" fxFill></app-async>
       <app-error-handling *ngSwitchCase="'error-handling'" fxFill></app-error-handling>
       <app-drag-and-drop *ngSwitchCase="'dragandrop'" fxFill></app-drag-and-drop>
-      <!-- <app-unsubscribe *ngSwitchCase="'unsubscribe'" fxFill></app-unsubscribe>
-      <app-switch-merge *ngSwitchCase="'switch-merge'" fxFill></app-switch-merge>
+      <app-unsubscribe *ngSwitchCase="'unsubscribe'" fxFill></app-unsubscribe>
+      <!-- <app-switch-merge *ngSwitchCase="'switch-merge'" fxFill></app-switch-merge>
      --></ng-container>
 
   </div>
