--- a/rxjs/src/app/app.component.html
+++ b/rxjs/src/app/app.component.html
@@ -7,8 +7,8 @@
       <mat-radio-button value="error-handling">Error Handling</mat-radio-button>
       <mat-radio-button value="dragandrop">Drag and Drop</mat-radio-button>
       <mat-radio-button value="unsubscribe">Unsubscribe</mat-radio-button>
-      <!-- <mat-radio-button value="switch-merge">Switch / Merge</mat-radio-button>
-     --></mat-radio-group>
+      <mat-radio-button value="switch-merge">Switch / Merge</mat-radio-button>
+    </mat-radio-group>
   </div>
   <div fxFlex="70" fxLayout="column" fxLayoutAlign="start start" fxFill>
     <ng-container [ngSwitch]="option">
@@ -18,8 +18,8 @@
       <app-error-handling *ngSwitchCase="'error-handling'" fxFill></app-error-handling>
       <app-drag-and-drop *ngSwitchCase="'dragandrop'" fxFill></app-drag-and-drop>
       <app-unsubscribe *ngSwitchCase="'unsubscribe'" fxFill></app-unsubscribe>
-      <!-- <app-switch-merge *ngSwitchCase="'switch-merge'" fxFill></app-switch-merge>
-     --></ng-container>
+      <app-switch-merge *ngSwitchCase="'switch-merge'" fxFill></app-switch-merge>
+    </ng-container>
 
   </div>
 </div>
